@@ -1,0 +1,33 @@
+.\" File automatically generated by doxy2man0.2
+.\" Generation date: Sat Apr 14 2018
+.TH rc_apply_config 3 2018-04-14 "radcli" "Radius client library"
+.SH "NAME"
+rc_apply_config \- 
+.SH SYNOPSIS
+.nf
+.B #include <radcli/radcli.h>
+.sp
+\fBint rc_apply_config\fP(
+    \fBrc_handle  *\fP\fIrh\fP
+);
+.fi
+.SH DESCRIPTION
+.PP 
+Applies and initializes any parameters from the radcli configuration
+.PP 
+When no configuration file is provided and the configuration is provided via rc_add_config(), radcli requires the call of this function in order to initialize items for the connection.
+.SH PARAMETERS
+.TP
+.B rh
+a handle to parsed configuration. 
+
+.SH RETURN VALUE
+.PP
+0 on success, -1 when failure. 
+.SH SEE ALSO
+.PP
+.nh
+.ad l
+\fIradcli.h\fP(3), \fIrc_aaa\fP(3), \fIrc_aaa_ctx\fP(3), \fIrc_aaa_ctx_free\fP(3), \fIrc_aaa_ctx_get_secret\fP(3), \fIrc_aaa_ctx_get_vector\fP(3), \fIrc_aaa_ctx_server\fP(3), \fIrc_acct\fP(3), \fIrc_acct_proxy\fP(3), \fIrc_add_config\fP(3), \fIrc_apply_config\fP(3), \fIrc_auth\fP(3), \fIrc_auth_proxy\fP(3), \fIrc_avpair_add\fP(3), \fIrc_avpair_assign\fP(3), \fIrc_avpair_copy\fP(3), \fIrc_avpair_free\fP(3), \fIrc_avpair_gen\fP(3), \fIrc_avpair_get\fP(3), \fIrc_avpair_get_attr\fP(3), \fIrc_avpair_get_in6\fP(3), \fIrc_avpair_get_raw\fP(3), \fIrc_avpair_get_uint32\fP(3), \fIrc_avpair_insert\fP(3), \fIrc_avpair_log\fP(3), \fIrc_avpair_new\fP(3), \fIrc_avpair_next\fP(3), \fIrc_avpair_parse\fP(3), \fIrc_avpair_remove\fP(3), \fIrc_avpair_tostr\fP(3), \fIrc_buildreq\fP(3), \fIrc_check\fP(3), \fIrc_check_tls\fP(3), \fIrc_conf_int\fP(3), \fIrc_conf_srv\fP(3), \fIrc_conf_str\fP(3), \fIrc_config_free\fP(3), \fIrc_config_init\fP(3), \fIrc_destroy\fP(3), \fIrc_dict_findattr\fP(3), \fIrc_dict_findval\fP(3), \fIrc_dict_findvend\fP(3), \fIrc_dict_free\fP(3), \fIrc_dict_getattr\fP(3), \fIrc_dict_getval\fP(3), \fIrc_dict_getvend\fP(3), \fIrc_find_server_addr\fP(3), \fIrc_get_socket_type\fP(3), \fIrc_get_srcaddr\fP(3), \fIrc_getport\fP(3), \fIrc_mksid\fP(3), \fIrc_new\fP(3), \fIrc_openlog\fP(3), \fIrc_own_hostname\fP(3), \fIrc_read_config\fP(3), \fIrc_read_dictionary\fP(3), \fIrc_send_server\fP(3), \fIrc_setdebug\fP(3), \fIrc_test_config\fP(3), \fIrc_tls_fd\fP(3), \fIrc_add_config()\fP
+.ad
+.hy
