@@ -609,6 +609,7 @@ char *rc_conf_str(rc_handle const *rh, char const *optname);
 int rc_conf_int(rc_handle const *rh, char const *optname);
 SERVER *rc_conf_srv(rc_handle const *rh, char const *optname);
 int rc_test_config(rc_handle *rh, char const *filename);
+int rc_apply_config(rc_handle *rh);
 int rc_find_server_addr (rc_handle const *rh, char const *server_name,
                          struct addrinfo** info, char *secret, rc_type type);
 void rc_config_free(rc_handle *rh);
